feat(accounting): introduce company masterdata and enforce closed accounting period across all posting flows
Added Company entity with DTO-based API and implemented accounting period
close/reopen. Applied closed-period validation consistently across invoice
posting, money transactions, allocations, bank statement processing and
matching logic.